title color chnage to bottle green

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -524,7 +524,7 @@ ol {
   --social-border-color-2: #ECEFF2;
   --social-border-color-3: #ECEFF2;
   --form-border: #CFDEF1;
-  --title-color:#0C263A;
+  --title-color:#006a4e;
   --title-color-style2:#0C263A;
   --text-color:#6B777F;
   --text-color-light: #6B6F7F;
