--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3549,7 +3549,7 @@ h6 a {
   right: 15px;
 }
 .menu--style1 li a {
-  color: var(--title-color);
+  color: var(--secondary-color);
 }
 .menu--style2 li a {
   color: var(--bg-white);
@@ -11226,6 +11226,26 @@ table > thead > tr{
   color: var(--text-color);
   position:sticky;
         top: 0 ;
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	left:40px;
+	background-color: var(--title-color);
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+
+.wa-float{
+  content: url("../images/logo/whatsapp.svg");
+  min-height: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
